need to fix the footer spacing

--- a/client/src/assets/css/global.css
+++ b/client/src/assets/css/global.css
@@ -70,6 +70,12 @@ textarea {
   margin: 0;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 /* UTILITY CLASSES */
 .grid {
   display: grid;
